logo fixed on IE9, corporate fixed

--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
@@ -10,8 +10,8 @@
         align-items: center;
 
         img {
-            max-height: 100%;
-            max-width: 100%;
+            max-height: 25px;
+            max-width: 331px;
         }
 
         @media all and (max-width: $xs-breakpoint) {
